# get-max-connected-tile

./: CMakeLists.txt  README.md  main.cpp  sample_good.txt
lib/: GetMaxConnNum.hpp
test/: CMakeLists.txt  hello_test.cc  input_test.cc
